# ml-audio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml  release.yml
docs/: conf.py  index.rst
docs/references/: reference.rst
docs/tutorials/: tutorial.md
src/ml_audio/: dataset.py  model.py  predict.py  preprocess.py  train.py
tests/: test_model.py
