[project]
name = "ml-audio"
version = "0.2.0"
description = "Audio Classification Project with scalograms and PyTorch."
authors = [
    {name = "Anaïs Dubois",email = "anais.dubois5@outlook.fr"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy (<2.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "ml_audio", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "black (>=25.11.0,<26.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
